Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/Customer_Verification_Code__c.object-meta.xml
<CustomObject>
    <description>Stores one-time verification (OTP) codes sent to contacts for call-in validation.</description>
    <label>Customer Verification Code</label>
    <nameField>
        <displayFormat>VCF-{0000}</displayFormat>
        <label>Verification Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Verification Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>