Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact who receives the verification code.</description>
    <label>Contact</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verification Codes</relationshipLabel>
    <relationshipName>Verification_Codes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>