Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>When the code expires and can no longer be used.</description>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>