Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>When the code was generated.</description>
    <label>Generated At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>