Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <description>User (CSR) who generated the code.</description>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verification Codes Generated</relationshipLabel>
    <relationshipName>Verification_Codes_Generated</relationshipName>
    <type>Lookup</type>
</CustomField>