Service Cloud/Email OTP/force-app/main/default/objects/Customer_Verification_Code__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <description>6-digit one-time verification code.</description>
    <label>Verification Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>